# crypto_price_aggregator

./: .gitignore  .gitlab-ci.yml  README.md  crypto_db_semestrovka.drawio  docker-compose.development.yml  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/api/: binance-api.py  binance_api.py  coinbase-api.py  kraken-api.py  kucoin-api.py  kucoin_api.py  websockets.py
app/api/crypto_sites/: base_class.py  base_classes.py  binance_api.py  coingecko_api.py  ftx_api.py  ftx_api_test.py  kucoin_api.py  symbol_tracker.py
app/api/routes/: api.py  authentication.py  coin.py  crud.py  crypto_websockets.py  statistics.py  top_10.py
app/api/services/: api_config.py  auth_helpers.py  db_services.py  loader.py  observer_for_crypto_prices.py  statistics_services.py
app/auth/: auth.py  db.py  forms.py  local_configs.py  models.py
app/auth/schemas/: user.py
app/auth/services/: auth_helpers.py  db_services.py
app/core/: config.py  permissions.py  queries.py
app/models/domain/: users.py
app/models/forms/: crud.py  users.py
app/models/schemas/: users.py
app/tests/: test_auth_helpers.py  test_forms_users.py
deploy/nginx/: Dockerfile  host.conf
deploy/python/: Dockerfile
migrations/: env.py
migrations/versions/: 2b5cca9568ff_added_timestamp_column.py  311f46fcc1eb_added_required_tables.py  327b2066c1db_fix_picture_id.py  43bae35c89aa_add_first_migration.py  de6eaf7cc8e4_add_is_admin_and_post_topics.py  e4213cb34927_added_required_tables.py  f45286a37233_added_required_tables.py  fdcba75b31c4_added_required_tables.py
static/: signup.css  signup_signin.css
templates/: settings.html  signin.html  signup.html
tests/: test_api_endpoints.py  test_auth_helpers.py  test_forms_users.py  test_user_creation.py
