[tool.poetry]
name = "crypto_aggregator"
version = "0.1.0"
description = ""
authors = ["daniskazan <danis.sharafiev@bk.ru>", ""]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.1"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
pydantic = {extras = ["email"], version = "^1.9.0"}
passlib = "^1.7.4"
python-jose = "^3.3.0"
python-multipart = "^0.0.5"
bcrypt = "^3.2.0"
itsdangerous = "^2.1.2"
httpx = "^0.22.0"
SQLAlchemy = "^1.4.35"
Authlib = "^1.0.1"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
