[tool.poetry]
name = "team-3"
version = "0.1.0"
description = ""
authors = ["eale <RUSLIKPVP@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
fastapi = "^0.75.2"
psycopg2 = "^2.9.3"
python-jose = "^3.3.0"
pydantic = {extras = ["email"], version = "^1.9.0"}
itsdangerous = "^2.1.2"
Authlib = "^1.0.1"
httpx = "^0.22.0"
SQLAlchemy = "^1.4.35"
python-binance = "^1.0.16"
coinbase = "^2.1.0"
pykrakenapi = "^0.3.0"
KuCoin = "^0.1"
python-kucoin = "^2.1.3"
binance = "^0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
